# kers

./: Cargo.toml  README.md
.metals/: metals.lock.db  metals.mv.db
src/: data.rs  kers.pest  lib.rs  main.rs  parse.rs  term.rs
src/evaltime/: checking.rs  evaluate.rs  interpreter.rs  mod.rs  ruintime.rs  typing.rs  values.rs  variables.rs
src/fp/: mod.rs  prism.rs  wrapper.rs
src/hkt/: mod.rs
src/language/: term.rs
src/language/term/: to_term.rs
src/parse/: decode.rs  error.rs
src/plugins/: mod.rs
