[package]
name = "kers"
version = "0.1.0"
edition = "2021"
authors = ["Oleg Nizhnikov"]
description = "Dependently type Object-Oriented Data Script"
license = "MIT"
repository = "https://github.com/odomontois/kers/"
homepage = "https://github.com/odomontois/kers/"
documentation = "https://github.com/odomontois/kers/"
keywords = ["language", "types", "dependent-types", "typechecking", "parsing"]
categories = ["language", "script"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
itertools = "0.12"
typenum = "1.17"
slotmap = { version = "1.0.7", features = ["serde"] }
derive_more = "0.99.17"
either = "1.10.0"

[lib]
crate-type = ["lib"]
name = "kers"

[[bin]]
name = "kers"
